--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  mongo_dart: ^0.7.4+1
+  shared_preferences: ^2.0.15
 
 
   # The following adds the Cupertino Icons font to your application.
