--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.0.15
+  mysql1: ^0.20.0
 
 
   # The following adds the Cupertino Icons font to your application.
