--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,11 @@
   "author": "Stephen Nyamali",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.6.5",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
 }
