--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.0.15
-  mongo_dart: ^0.7.4+1
-  http_server: ^0.9.8+1
+  http: ^0.13.4
 
 
   # The following adds the Cupertino Icons font to your application.
